# PythonOCC-DEMO

./: .gitignore  CMakeLists.txt  LICENSE  Main.java  MultiDeviceTEST.xml  Network VT3-addsection.xlsx  Network VT3.xlsx  Network_VT3_modified.xlsx  New_MultiDeviceTEST.xml  New_TEST.xml  TEST.xml  build_nuitka.py  config.ini  configmanager.cpp  configmanager.h  docs.md  filehandlerinterface.h  filevisualizer.cpp  filevisualizer.h  main.cpp  model_visualize.pro  process_xlsx.py  requirements.txt  setup.py  visualize_xlsx.py  visualize_xml.py
.github/workflows/: build.yml
model/: test.step  xml_model.iges
